com fé em Deus vai dar certo, com essa nova Main