@@ -1,14 +1,23 @@
 package json;
 
 import org.json.*;
-import java.nio.file.*;
+
+import java.io.IOException;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import cidade.*;
 import estruturas.*;
 
 public class LeitorOSMJson {
 
-    public static Grafo carregar(String caminho) throws Exception {
-        String conteudo = new String(Files.readAllBytes(Paths.get(caminho)));
+    public static Grafo carregar(String caminho) throws JSONException, IOException {
+        InputStream inputStream = LeitorOSMJson.class.getClassLoader().getResourceAsStream(caminho);
+
+        if (inputStream == null) {
+            throw new IllegalArgumentException("Arquivo JSON não encontrado: " + caminho);
+        }
+
+        String conteudo = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
         JSONObject json = new JSONObject(conteudo);
         JSONArray elementos = json.getJSONArray("elements");
 
@@ -20,6 +29,7 @@ public class LeitorOSMJson {
             String tipo = elemento.getString("type");
 
             if (tipo.equals("node")) {
+                // Criar um vértice para cada node
                 long id = elemento.getLong("id");
                 double lat = elemento.getDouble("lat");
                 double lon = elemento.getDouble("lon");
@@ -28,16 +38,23 @@ public class LeitorOSMJson {
                 mapaNos.adicionar(v);
             }
 
+            // Verificação de "way" e seus nodes
             if (tipo.equals("way") && elemento.has("nodes")) {
                 JSONArray nos = elemento.getJSONArray("nodes");
                 boolean isOneway = elemento.has("tags") && elemento.getJSONObject("tags").has("oneway");
+
+                // Adicionar as arestas de cada par de nodes consecutivos
                 for (int j = 0; j < nos.length() - 1; j++) {
                     long origemId = nos.getLong(j);
                     long destinoId = nos.getLong(j + 1);
                     Vertice origem = buscarVerticePorId(mapaNos, origemId);
                     Vertice destino = buscarVerticePorId(mapaNos, destinoId);
+
+                    // Verificar se os vértices realmente existem antes de adicionar a aresta
                     if (origem != null && destino != null) {
                         grafo.adicionarAresta(origem, destino, isOneway);
+                    } else {
+                        System.err.println("Erro ao adicionar aresta: um dos vértices não encontrado.");
                     }
                 }
             }
